--- a/fanbatlle/resources/css/app.css
+++ b/fanbatlle/resources/css/app.css
@@ -212,3 +212,9 @@
 .hover-scale:hover {
     transform: scale(1.02);
 }
+
+.LanguageSvg{
+    position: absolute;
+    right: 28;
+    bottom: 10;
+}
